[package]
name = "image"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
urlencoding = "2.1"
tower-http = { version = "0.5", features = ["fs"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = "fat"
strip = true
debug = "none"
panic = "abort"
opt-level = 3
codegen-units = 2